version/0.30/_sources/api/solver/_autosummary/settings/p_v_coupling.rst.txt
:orphan:

.. _p_v_coupling:

p_v_coupling
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.p_v_coupling
    :show-inheritance:

.. rubric:: Attributes

====================================================================   =====================================================

Attribute                                                                                                            Summary

====================================================================   =====================================================
:ref:`flow_scheme <flow_scheme>`                                                                        'flow_scheme' child.

:ref:`skewness_correction_itr_count <skewness_correction_itr_count>`                     Iterations for skewness correction.

:ref:`neighbor_correction_itr_count <neighbor_correction_itr_count>`                     Iterations for neighbor correction.

:ref:`skewness_neighbor_coupling <skewness_neighbor_coupling>`                                  Skewness-Neighbor Coupling?.

:ref:`coupled_form <coupled_form>`                                                                     'coupled_form' child.

:ref:`solve_n_phase <solve_n_phase>`                                       Enable/disable N-Phase volume fraction equations.

====================================================================   =====================================================

.. rubric:: Included in:

============================   ================================

Parent                                                  Summary

============================   ================================
:ref:`methods_1 <methods_1>`       The solution methods object.

============================   ================================

